# OpenGL-Template

./: CMakeLists.txt  README.md
src/: main.cpp
